--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,20 @@
-
 {
   "name": "kittinan/php-promptpay-qr",
   "description": "PHP Library to generate QR Code payload for PromptPay",
-  "keywords": ["Promptpay"],
+  "keywords": [
+    "Promptpay"
+  ],
   "license": "MIT",
   "require": {
-    "php": ">=5.4",
+    "php": ">=7.1",
     "bacon/bacon-qr-code": "^1.0",
-    "kittinan/php-crc": "1.0.0"
+    "kittinan/php-crc": "1.0.0",
+    "ext-curl": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "4.8.12",
-    "phpunit/php-timer": "1.0.9",
-    "satooshi/php-coveralls": "v1.0.1"
+    "phpunit/phpunit": "^9.5",
+    "phpunit/php-timer": "^5.0",
+    "satooshi/php-coveralls": "^1.0.1"
   },
   "autoload": {
     "psr-4": {
