--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,14 @@
   "license": "MIT",
   "require": {
     "php": ">=7.1",
-    "bacon/bacon-qr-code": "^1.0",
+    "bacon/bacon-qr-code": "^2.0",
     "kittinan/php-crc": "1.0.0",
     "ext-curl": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
     "phpunit/php-timer": "^5.0",
-    "satooshi/php-coveralls": "^1.0.1"
+    "php-coveralls/php-coveralls": "^2.5"
   },
   "autoload": {
     "psr-4": {
